--- a/index.html
+++ b/index.html
@@ -20,128 +20,140 @@
 
 <body>
     <!--Site-header-->
-    <header class="header">
+    <header class="header">   
+        <div class="container main-nav">
+            <a class="logo" href="">Web<span class="logo-accent">Studio</span></a>
 
-        <a class="logo" href="">Web<span class="logo-accent">Studio</span></a>
+            <nav>
+                <ul class="site-nav list">
+                    <li> <a class="link current" href="">Студия</a></li>
+                    <li> <a class="link" href="./portfolio.html">Портфолио</a></li>
+                    <li> <a class="link" href="">Контакты</a></li>
 
-        <nav>
-            <ul class="site-nav">
-                <li> <a class="link current" href="">Студия</a></li>
-                <li> <a class="link" href="./portfolio.html">Портфолио</a></li>
-                <li> <a class="link" href="">Контакты</a></li>
+                </ul>
 
-            </ul>
+            </nav>
 
-        </nav>
+                <ul class="auth-nav list">
+                     <li> <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                     <li> <a class="link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
 
-        <ul class="auth-nav">
-            <li> <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-            <li> <a class="link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
-
-        </ul>
+                </ul>
+        </div>
 
     </header>
     <main>
         <!--Hero-->
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-            <button class="button-primary" type="button">Заказать услугу</button>
+            <div class="container">
+                <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+                 <button class="button-primary" type="button">Заказать услугу</button>
+            </div>
         </section>
 
         <!--Peculiarities-->
-        <section class="section">
-            <h2 class="visually-hidden">Peculiarities</h2>
-            <ul class="features">
-                <li>
-                    <h3 class="feature-title">Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="feature-title">Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="feature-title">Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="feature-title">Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </p>
-                </li>
-            </ul>
+        <section class="section feature">
+            <div class="container">
+                 <h2 class="visually-hidden">Peculiarities</h2>
+                 <ul class="features-list list">
+                    <li class="item">
+                        <h3 class="feature-title">Внимание к деталям</h3>
+                        <p class="feauture-text">Идейные соображения, а также начало повседневной работы по формированию позиции.
+                        </p>
+                    </li>
+                    <li class="item">
+                        <h3 class="feature-title">Пунктуальность</h3>
+                        <p class="feauture-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                        </p>
+                    </li>
+                    <li class="item">
+                        <h3 class="feature-title">Планирование</h3>
+                        <p class="feauture-text">Равным образом консультация с широким активом в значительной степени обуславливает.
+                        </p>
+                    </li>
+                    <li class="item">
+                        <h3 class="feature-title">Современные технологии</h3>
+                        <p class="feauture-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
-
 
         <!--What-do-we-specialize-in-->
-        <section class="section">
-            <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul>
-                <li> <img src="./img/img-1.jpeg" alt="Фото с ноутбуком" width="370" height="294"></li>
-                <li> <img src="./img/img-2.jpeg" alt="Фото с телефоном" width="370" height="294"></li>
-                <li> <img src="./img/img-3.jpeg" alt="Фото с планшетом" width="370" height="294"></li>
-            </ul>
-
+        <section class="section do">
+            <div class="container">
+                <h2 class="section-title">Чем мы занимаемся</h2>
+                <ul class="img-list list">
+                    <li class="item"> <img src="./img/img-1.jpeg" alt="Фото с ноутбуком" width="370" height="294"></li>
+                    <li class="item"> <img src="./img/img-2.jpeg" alt="Фото с телефоном" width="370" height="294"></li>
+                    <li class="item"> <img src="./img/img-3.jpeg" alt="Фото с планшетом" width="370" height="294"></li>
+                </ul>
+            </div>    
         </section>
+
         <!--Team-->
         <section class="section team">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="team-list">
-                <!--Igor-->
-                <li>
-                    <img src="./img/img-4.jpeg" alt="Фото Игоря" width="270" height="260">
-                    <h3 class="team-name">Игорь Демьяненко</h3>
-                    <p class="team-text">Product Designer</p>
-                </li>
-                <!--Olha-->
-                <li>
+            <div class="container">
+                <h2 class="section-title">Наша команда</h2>
+                <ul class="team-list">
 
-                    <img src="./img/img-5.jpeg" alt="Фото Ольги" width="270" height="260">
-                    <h3 class="team-name">Ольга Репина</h3>
-                    <p class="team-text">Frontend Developer</p>
+                    <!--Igor-->
+                    <li class="item">
+                        <img class="img" src="./img/img-4.jpeg" alt="Фото Игоря" width="270" height="260">
+                        <div class="team-list">
+                            <h3 class="team-name">Игорь Демьяненко</h3>
+                            <p class="team-text">Product Designer</p>
+                        </div>
+                    </li>
 
-                </li>
-                <!--Nicola-->
-                <li>
+                     <!--Olha-->
+                    <li class="item">
 
-                    <img src="./img/img-6.jpeg" alt="Фото Николая" width="270" height="260">
-                    <h3 class="team-name">Николай Тарасов</h3>
-                    <p class="team-text">Marketing</p>
+                    <img class="img" src="./img/img-5.jpeg" alt="Фото Ольги" width="270" height="260">
+                    <div class="team-list">
+                        <h3 class="team-name">Ольга Репина</h3>
+                        <p class="team-text">Frontend Developer</p>
+                    </div>
+                    </li>
 
-                </li>
-                <!--Mikle-->
-                <li>
+                    <!--Nicola-->
+                    <li class="item">
+                        <img class="img" src="./img/img-6.jpeg" alt="Фото Николая" width="270" height="260">
+                        <div class="team-list">
+                            <h3 class="team-name">Николай Тарасов</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
+                    </li>
 
-                    <img src="./img/img-7.jpeg" alt="Фото Михаила" width="270" height="260">
-                    <h3 class="team-name">Михаил Ермаков</h3>
-                    <p class="team-text">UI Designer</p>
-
-
-                </li>
-            </ul>
-
+                    <!--Mikle-->
+                    <li class="item">
+                        <img class="img" src="./img/img-7.jpeg" alt="Фото Михаила" width="270" height="260">
+                        <div class="team-list">
+                            <h3 class="team-name">Михаил Ермаков</h3>
+                            <p class="team-text">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
-
     </main>
+
     <!--Basement-->
     <footer class="footer">
-        <a class="logo" href="">Web<span class="logo-footer">Studio</span></a>
-        <address class="address">
-            <ul>
-                <li> <a class="link address-place" href="https://goo.gl/maps/zkPrUZPVj4T2EZEg6" target="_blank"
+        <div class="container">
+            <a class="logo link logo-next" href="">Web<span class="logo-footer">Studio</span></a>
+            <address class="address-top">
+                <ul class="address list">
+                    <li class="item"> <a class="link address-place" href="https://goo.gl/maps/zkPrUZPVj4T2EZEg6" target="_blank"
                         rel="noreferrer noopener">
                         г. Киев, пр-т Леси Украинки, 26
                     </a></li>
-                <li> <a class="link address-contact" href="mailto:info@example.com">info@example.com</a></li>
-                <li> <a class="link address-contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
-
+                    <li class="item"> <a class="link address-contact" href="mailto:info@example.com">info@example.com</a></li>
+                    <li class="item"> <a class="link address-contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
-
 </body>
-
 </html>
