--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-                 <button class="button-primary" type="button">Заказать услугу</button>
+                 <button class="button button-primary" type="button">Заказать услугу</button>
             </div>
         </section>
 
@@ -93,10 +93,10 @@
         </section>
 
         <!--Team-->
-        <section class="section team">
+        <section class="section-team">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
-                <ul class="team-list">
+                <ul class="team list">
 
                     <!--Igor-->
                     <li class="item">
@@ -142,7 +142,7 @@
     <!--Basement-->
     <footer class="footer">
         <div class="container">
-            <a class="logo link logo-next" href="">Web<span class="logo-footer">Studio</span></a>
+            <a class="logo" href="">Web<span class="logo-footer">Studio</span></a>
             <address class="address-top">
                 <ul class="address list">
                     <li class="item"> <a class="link address-place" href="https://goo.gl/maps/zkPrUZPVj4T2EZEg6" target="_blank"
