--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     <!--Site-header-->
     <header class="header">
         <div class="container main-nav">
-            <a class="logo link" href="">Web<span class="logo-accent">Studio</span></a>
+            <a class="logo" href="">Web<span class="logo-accent">Studio</span></a>
 
         <nav>
             <ul class="site-nav list">
@@ -152,7 +152,7 @@
     <!--Basement-->
     <footer class="footer">
         <div class="container">
-            <a class="logo link logo-next" href="">Web<span class="logo-footer">Studio</span></a>
+            <a class="logo" href="">Web<span class="logo-footer">Studio</span></a>
             <address class="address-top">
                 <ul class="address">
                     <li class="item"> <a class="address-place" href="https://goo.gl/maps/zkPrUZPVj4T2EZEg6" target="_blank"
