--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="section feature">
             <div class="container">
                  <h2 class="visually-hidden">Peculiarities</h2>
-                 <ul class="features-list list">
+                 <ul class="feature-list list">
                     <li class="item">
                         <h3 class="feature-title">Внимание к деталям</h3>
                         <p class="feauture-text">Идейные соображения, а также начало повседневной работы по формированию позиции.
