--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 
             <nav>
                 <ul class="site-nav list">
-                    <li> <a class="link current" href="">Студия</a></li>
-                    <li> <a class="link" href="./portfolio.html">Портфолио</a></li>
-                    <li> <a class="link" href="">Контакты</a></li>
+                    <li class="site-nav-item"> <a class="link current" href="">Студия</a></li>
+                    <li class="site-nav-item"> <a class="link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="site-nav-item"> <a class="link" href="">Контакты</a></li>
 
                 </ul>
 
             </nav>
 
                 <ul class="auth-nav list">
-                     <li> <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                     <li> <a class="link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+                     <li class="auth-nav-item"> <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                     <li class="auth-nav-item"> <a class="link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
 
                 </ul>
         </div>
