--- a/portfolio.html
+++ b/portfolio.html
@@ -28,16 +28,16 @@
 
         <nav>
             <ul class="site-nav list">
-                <li class="item"> <a class="link" href="./index.html">Студия</a></li>
-                <li class="item"> <a class="link current" href="./portfolio.html">Портфолио</a></li>
-                <li class="item"> <a class="link" href="">Контакты</a></li>
+                <li class="site-nav-item"> <a class="link" href="./index.html">Студия</a></li>
+                <li class="site-nav-item"> <a class="link current" href="./portfolio.html">Портфолио</a></li>
+                <li class="site-nav-item"> <a class="link" href="">Контакты</a></li>
             </ul>
 
         </nav>
 
         <ul class="auth-nav list">
-            <li class="item"> <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-            <li class="item"> <a class="link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+            <li class="auth-nav-item"> <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+            <li class="auth-nav-item"> <a class="link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
         </ul>
         </div>
     </header>
@@ -56,7 +56,7 @@
 
                 <ul class="project-list list">
                     <li class="project-item">
-                        <a class="link" href="@">
+                        <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img9-1.jpeg" alt="our specialists">
                         <div class="project-container">
                             <h2 class="project-title">Технокряк</h2>
@@ -66,7 +66,7 @@
                     </li>
 
                     <li class="project-item">
-                        <a class="link" href="@">
+                        <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img1-1.jpeg" alt="basketball players">
                         <div class="project-container">
                             <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
@@ -76,7 +76,7 @@
                     </li>
 
                     <li class="project-item">
-                        <a class="link" href="@">
+                        <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img2-1.jpeg" alt="logo of seafoodrestaurant">
                         <div class="project-container">
                             <h2 class="project-title">Ресторан Seafood</h2>
@@ -86,7 +86,7 @@
                     </li>
 
                     <li class="project-item">
-                        <a class="link" href="@">
+                        <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img3-1.jpeg" alt="headphone">
                         <div class="project-container">
                             <h2 class="project-title">Маркетинг</h2>
@@ -96,7 +96,7 @@
                     </li>
 
                     <li class="project-item">
-                        <a class="link" href="@">
+                        <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img4-1.jpeg" alt="boxes">
                         <div class="project-container">
                              <h2 class="project-title">Проект Boxes</h2>
@@ -106,7 +106,7 @@
                     </li>
 
                     <li class="project-item">
-                        <a class="link" href="@">
+                        <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img5-1.jpeg" alt="monitor">
                         <div class="project-container">
                             <h2 lang="en" class="project-title">Inspiration has no Borders</h2>
@@ -116,7 +116,7 @@
                     </li>
 
                     <li class="project-item">
-                        <a class="link" href="@">
+                        <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img6-1.jpeg" alt="book">
                         <div class="project-container">
                             <h2 class="project-title">Издание Limited Edition</h2>
@@ -126,7 +126,7 @@
                     </li>
 
                     <li class="project-item">
-                        <a class="link" href="@">
+                        <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img7-1.jpeg" alt="label teg">
                         <div class="project-container">
                             <h2 class="project-title">Проект LAB</h2>
@@ -136,7 +136,7 @@
                     </li>
 
                     <li class="project-item">
-                        <a class="link" href="@">
+                        <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img8-1.jpeg" alt="leptop">
                         <div class="project-container">
                             <h2 class="project-title">Growing Business</h2>
