--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
         <section class="section feature">
             <div class="container">
                  <h2 class="visually-hidden">Peculiarities</h2>
-                 <ul class="feature-list list">
-                    <li class="item">
+                 <ul class="feature-list list card-set">
+                    <li class="item card-item">
                         <h3 class="feature-title">Внимание к деталям</h3>
                         <p class="feauture-text">Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                     </li>
-                    <li class="item">
+                    <li class="item card-item">
                         <h3 class="feature-title">Пунктуальность</h3>
                         <p class="feauture-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                         </p>
                     </li>
-                    <li class="item">
+                    <li class="item card-item">
                         <h3 class="feature-title">Планирование</h3>
                         <p class="feauture-text">Равным образом консультация с широким активом в значительной степени обуславливает.
                         </p>
                     </li>
-                    <li class="item">
+                    <li class="item card-item">
                         <h3 class="feature-title">Современные технологии</h3>
                         <p class="feauture-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                         </p>
@@ -84,22 +84,22 @@
         <section class="section do">
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
-                <ul class="img-list list">
-                    <li class="item"> <img src="./img/img-1.jpeg" alt="Фото с ноутбуком" width="370" height="294"></li>
-                    <li class="item"> <img src="./img/img-2.jpeg" alt="Фото с телефоном" width="370" height="294"></li>
-                    <li class="item"> <img src="./img/img-3.jpeg" alt="Фото с планшетом" width="370" height="294"></li>
+                <ul class="img-list list card-set">
+                    <li class="item card-item"> <img src="./img/img-1.jpeg" alt="Фото с ноутбуком" width="370" height="294"></li>
+                    <li class="item card-item"> <img src="./img/img-2.jpeg" alt="Фото с телефоном" width="370" height="294"></li>
+                    <li class="item card-item"> <img src="./img/img-3.jpeg" alt="Фото с планшетом" width="370" height="294"></li>
                 </ul>
             </div>    
         </section>
 
         <!--Team-->
-        <section class="section-team">
+        <section class="section section-team">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
-                <ul class="team list">
+                <ul class="team list card-set">
 
                     <!--Igor-->
-                    <li class="item">
+                    <li class="item card-item">
                         <img class="img" src="./img/img-4.jpeg" alt="Фото Игоря" width="270" height="260">
                         <div class="team-list">
                             <h3 class="team-name">Игорь Демьяненко</h3>
@@ -108,7 +108,7 @@
                     </li>
 
                      <!--Olha-->
-                    <li class="item">
+                    <li class="item card-item">
 
                     <img class="img" src="./img/img-5.jpeg" alt="Фото Ольги" width="270" height="260">
                     <div class="team-list">
@@ -118,7 +118,7 @@
                     </li>
 
                     <!--Nicola-->
-                    <li class="item">
+                    <li class="item card-item">
                         <img class="img" src="./img/img-6.jpeg" alt="Фото Николая" width="270" height="260">
                         <div class="team-list">
                             <h3 class="team-name">Николай Тарасов</h3>
@@ -127,7 +127,7 @@
                     </li>
 
                     <!--Mikle-->
-                    <li class="item">
+                    <li class="item card-item">
                         <img class="img" src="./img/img-7.jpeg" alt="Фото Михаила" width="270" height="260">
                         <div class="team-list">
                             <h3 class="team-name">Михаил Ермаков</h3>
