--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-        <section class="section-portfolio">
+        <section class="section portfolio">
             <div class="container">
                 <h1 class="visually-hidden">Content Portfolio page</h1>
                 <ul class="button-list list">
@@ -54,8 +54,8 @@
                     <li class="item"> <button class="button-portfolio" type="button">Маркетинг</button></li>
                 </ul>
 
-                <ul class="project-list list">
-                    <li class="project-item">
+                <ul class="card-set project-list list">
+                    <li class="card-item project-item">
                         <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img9-1.jpeg" alt="our specialists">
                         <div class="project-container">
@@ -65,7 +65,7 @@
                         </a>
                     </li>
 
-                    <li class="project-item">
+                    <li class="card-item project-item">
                         <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img1-1.jpeg" alt="basketball players">
                         <div class="project-container">
@@ -75,7 +75,7 @@
                         </a>
                     </li>
 
-                    <li class="project-item">
+                    <li class="card-item project-item">
                         <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img2-1.jpeg" alt="logo of seafoodrestaurant">
                         <div class="project-container">
@@ -85,7 +85,7 @@
                         </a>
                     </li>
 
-                    <li class="project-item">
+                    <li class="card-item project-item">
                         <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img3-1.jpeg" alt="headphone">
                         <div class="project-container">
@@ -95,7 +95,7 @@
                         </a>
                     </li>
 
-                    <li class="project-item">
+                    <li class="card-item project-item">
                         <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img4-1.jpeg" alt="boxes">
                         <div class="project-container">
@@ -105,7 +105,7 @@
                         </a>
                     </li>
 
-                    <li class="project-item">
+                    <li class="card-item project-item">
                         <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img5-1.jpeg" alt="monitor">
                         <div class="project-container">
@@ -115,7 +115,7 @@
                         </a>
                     </li>
 
-                    <li class="project-item">
+                    <li class="card-item project-item">
                         <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img6-1.jpeg" alt="book">
                         <div class="project-container">
@@ -125,7 +125,7 @@
                         </a>
                     </li>
 
-                    <li class="project-item">
+                    <li class="card-item project-item">
                         <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img7-1.jpeg" alt="label teg">
                         <div class="project-container">
@@ -135,7 +135,7 @@
                         </a>
                     </li>
 
-                    <li class="project-item">
+                    <li class="card-item project-item">
                         <a class="link" rel="preconnect" href="https://www.google.com/">
                         <img class="img" src="./img/img8-1.jpeg" alt="leptop">
                         <div class="project-container">
@@ -154,7 +154,7 @@
         <div class="container">
             <a class="logo" href="">Web<span class="logo-footer">Studio</span></a>
             <address class="address-top">
-                <ul class="address">
+                <ul class="address list">
                     <li class="item"> <a class="address-place" href="https://goo.gl/maps/zkPrUZPVj4T2EZEg6" target="_blank"
                         rel="noreferrer noopener">
                         г. Киев, пр-т Леси Украинки, 26
